--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.8.3",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.17.24",
     "@types/react": "18.3.18",
     "@types/react-dom": "^18",
