--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.8.3",
+    "cookies-next": "^5.1.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
